fixed sidebar nav spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@
 }
 
 #sidebar a{
-    margin: 20px 0;
+    margin: 15px 0;
     padding: 5px 0;
     text-decoration: none;
     font-family: roboto;
